Fixed accession wrapping on study list

--- a/webapp/src/main/webapp/assets/stylesheets/bs-studies-browse-1.0.150220.css
+++ b/webapp/src/main/webapp/assets/stylesheets/bs-studies-browse-1.0.150220.css
@@ -58,6 +58,7 @@
     font-size: 70%;
     padding: 5px;
     color: rgb(107, 168, 197);
+    white-space: nowrap;
 }
 
 .browse-study-accession:before {
